fixed readme and style issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -288,6 +288,7 @@ main {
           width: 100%;
           overflow-x: auto; 
           -webkit-overflow-scrolling: touch;
+          display: block;
         }
       }
     }
