Adding support for alternate AutoPots schedule

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -115,8 +115,11 @@ main {
 
     .formula {
       display: flex;
-
-      >custom-select {
+      flex-wrap: wrap;
+      >custom-select.mediums {
+        flex-basis: 100%;
+      }
+      >custom-select.stages {
         width: 150px;
       }
 
